# pneumonia-detection

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: pneumonia-detection.ipynb
